<resources>
    <string name="app_name">LOKANA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="deskripsi">Deskripsi</string>
    <string name="title">Text</string>
    <string name="landing_page_1">Landing Page 1</string>
    <string name="circle_1">circle 1</string>
    <string name="circle_2">circle 2</string>
    <string name="circle_3">circle 3</string>
    <string name="circle_4">circle 4</string>
    <string name="circle_5">circle 5</string>
    <string name="title_choice">Anda Sebagai :</string>
    <string name="user_choice">Icon User</string>
    <string name="user">User</string>
    <string name="government_choice">Icon Pemerintah</string>
    <string name="government">Pemerintah</string>
    <string name="tv_login">Login</string>
    <string name="btn_find">Find</string>
    <string name="ed_login">Username</string>
    <string name="tv_password">Password</string>
    <string name="tv_login_hub_admin"> Anda ingin menjadi admin ? Silahkan kontak kami </string>
    <string name="contact_admin">Contact Admin</string>
    <string name="tv_social_media">Our Social Media</string>
    <string name="build_since">2024 Lokana</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="welcome">Selamat Datang</string>
    <string name="mathcing">Matching Photo</string>
    <string name="petunjuk">Petunjuk :</string>
    <string name="isi_petunjuk">Foto wajah menghadap ke depan serta
wajah harus terlihat jelas tidak blur
sesuai contoh </string>
    <string name="back">Back</string>
    <string name="cari_orang_hilang">Cari Orang Hilang</string>
    <string name="nama_orang">Nama Orang</string>
    <string name="search">Search</string>
    <string name="edit_nama_orang">Search</string>
    <string name="gender">Gender</string>
    <string name="location">location</string>
    <string name="hasil">Hasil</string>
    <string name="data_tidak_ditemukan">Data Tidak Ditemukan</string>
    <string name="foto_orang">foto orang</string>
    <string name="status">Status</string>
    <string name="ditemukan">Ditemukan</string>
    <string name="hilang">Hilang</string>
    <string name="nama">Nama</string>
    <string name="cari_orang">CARI ORANG</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="note">Note :</string>
    <string name="isi_example_pencarian_orang">Mohon Perhatikan Foto Pencarian Orang Hilang dengan Detail Pencarian Orang Hilang</string>
    <string name="banner">banner</string>
    <string name="status_pencarian_orang">Status Pencarian Orang</string>
    <string name="berat">berat</string>
    <string name="usia">Usia</string>
    <string name="ciri_fisik">Ciri Fisik</string>
    <string name="icon_map">icon map</string>
    <string name="lokasi_terakhir">Lokasi Terakhir</string>
    <string name="sering_ditemukan">Sering Ditemukan</string>
    <string name="jika_mencari_orang_ini_hubungi">Jika Mencari Orang Ini Hubungi</string>
    <string name="foto_profil">foto profil</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="berat_kg">berat (Kg)</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="kota">Kota</string>
    <string name="tempat_sering_terlihat">Tempat Sering Terlihat</string>
    <string name="nomer_pemerintah">Nomer Pemerintah</string>
    <string name="tambah_orang_hilang">Tambah Orang Hilang</string>
    <string name="foto_1">Foto 1</string>
    <string name="foto_2">Foto 2</string>
    <string name="call_center">Call Center</string>
    <string-array name="choice_gender">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="title_guide_fragment">
        <item>Mencari Orang Hilang</item>
        <item>Tambahkan Orang Hilang</item>
    </string-array>
    <string-array name="title_card_guide">
        <item>Temukan Orang Yang Anda Cari</item>
        <item>Bantu Tambahkan Orang Hilang</item>
    </string-array>
</resources>