<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.guide.GuideFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bacground_title_choice_user"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:background="@drawable/rounded_bottom_corner"
        android:elevation="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_choice"
            android:layout_width="259dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/title_choice"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            
            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="15dp"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="79dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/user_choice"
                        android:layout_marginTop="15dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user"
                        android:layout_gravity="center"
                        android:fontFamily="@font/josefin_sans"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="15dp"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="79dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/government_choice"
                        android:layout_marginTop="15dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/government"
                        android:layout_gravity="center"
                        android:fontFamily="@font/josefin_sans"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/layout_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bacground_title_choice_user">

        <ImageView
            android:id="@+id/unselected_circle_1_choice_user"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/circle_1" />

        <ImageView
            android:id="@+id/unselected_circle_2_choice_user"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/circle_2" />

        <ImageView
            android:id="@+id/unselected_circle_3_choice_user"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/circle_3" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>