<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.foto.FotoActivity">

    <LinearLayout
        android:id="@+id/container_menu_foto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/josefin_sans"
            android:text="@string/cari_orang_hilang"
            android:textColor="@color/primaryText"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_title_cari_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/josefin_sans"
        android:textStyle="bold"
        android:text="@string/cari_orang"
        android:textAlignment="center"
        android:textColor="@color/primaryText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_menu_foto" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container_form_foto"
        android:layout_width="303dp"
        android:layout_height="309dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_cari_foto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/background_photo"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/container_foto"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_foto_cari"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/mathcing"
                    android:src="@drawable/baseline_person_24" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_camera"
                android:layout_width="99dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/josefin_sans"
                android:textStyle="bold"
                android:elevation="10dp"
                android:text="@string/camera"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/background_photo"
                app:layout_constraintVertical_bias="0.191" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_galery"
                android:layout_width="99dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:elevation="10dp"
                android:fontFamily="@font/josefin_sans"
                android:textStyle="bold"
                android:text="@string/gallery"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_camera"
                app:layout_constraintTop_toBottomOf="@id/background_photo"
                app:layout_constraintVertical_bias="0.191" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_search_foto"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                android:text="@string/search"
                android:fontFamily="@font/josefin_sans"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:backgroundTint="@color/primaryText"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_galery" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="236dp"
        android:layout_height="88dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/container_card_note_foto"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_form_foto">

        <TextView
            android:id="@+id/tv_title_note_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/note"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_text_example_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/josefin_sans"
            android:textStyle="bold"
            android:lines="3"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_note_foto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/isi_example_pencarian_orang"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>